--- a/components/dashboard-menu.html
+++ b/components/dashboard-menu.html
@@ -95,7 +95,7 @@
                     <li><a class="dropdown-item" href="#" data-section="support">
                         <i class="fas fa-question-circle me-2"></i>Suporte
                     </a></li>
-                    <li id="admin-menu-item"><a class="dropdown-item" href="admin.html">
+                    <li id="admin-menu-item"><a class="dropdown-item" href="admin-panel.html">
                         <i class="fas fa-shield-alt me-2"></i>Admin Panel
                     </a></li>
                     <li><hr class="dropdown-divider"></li>
